@startuml uml_classes_modelos
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam stereotypeCBackgroundColor #E8F4FF
hide empty methods

enum TipoTransacao <<Enum>> {
  RECEITA = "RECEITA"
  DESPESA = "DESPESA"
}

enum CorCartao <<Enum>> {
  AZUL = "BLUE"
  VERDE = "GREEN"
  VERMELHO = "RED"
  ROXO = "PURPLE"
  PRETO = "BLACK"
  LARANJA = "ORANGE"
  CINZA = "GRAY"
}

enum Frequencia <<Enum>> {
  MENSAL = "MENSAL"
  QUINZENAL = "QUINZENAL"
  SEMANAL = "SEMANAL"
  ANUAL = "ANUAL"
}

class User <<Entity>> {
  +id : int
  +username : str
  +email : str
  +password : str
  +is_active : bool
  +is_staff : bool
}

class Categoria <<Entity>> {
  +id : int
  +usuario_id : int
  +nome : str
  --
  __str__() : str
  ' unique_together: (usuario, nome)
}

class CartaoCredito <<Entity>> {
  +id : int
  +usuario_id : int
  +nome : str
  +limite : Decimal
  +dia_fechamento : int
  +dia_vencimento : int
  +cor : CorCartao
  --
  __str__() : str
}

class Transacao <<Entity>> {
  +id : int
  +usuario_id : int
  +data : date
  +tipo : TipoTransacao
  +descricao : str
  +valor : Decimal
  +categoria_id : int
  +cartao_credito_id : int
  +fatura_paga : bool
  --
  __str__() : str
  ' ordering: [-data]
}

class Orcamento <<Entity>> {
  +id : int
  +usuario_id : int
  +categoria_id : int
  +valor_mensal : Decimal
  --
  __str__() : str
  ' unique_together: (usuario, categoria)
}

class FaturaCartao <<Entity>> {
  +id : int
  +usuario_id : int
  +cartao_credito_id : int
  +mes_referencia : date
  +paga : bool
  +data_pagamento : date
  --
  __str__() : str
  valor_total : Decimal <<property>>
  ' unique_together: (cartao_credito, mes_referencia)
  ' ordering: [-mes_referencia]
}

class TransacaoRecorrente <<Entity>> {
  +id : int
  +usuario_id : int
  +tipo : TipoTransacao
  +descricao : str
  +valor : Decimal
  +categoria_id : int
  +cartao_credito_id : int
  +frequencia : Frequencia
  +proxima_ocorrencia : date
  +ativa : bool
  --
  __str__() : str
  avancar_proxima_ocorrencia() : void
  ' ordering: [proxima_ocorrencia]
}

User "1" --> "0..*" Categoria : possui
User "1" --> "0..*" CartaoCredito : possui
User "1" --> "0..*" Transacao : registra
User "1" --> "0..*" Orcamento : define
User "1" --> "0..*" FaturaCartao : acompanha
User "1" --> "0..*" TransacaoRecorrente : programa
Categoria "1" --> "0..*" Transacao : classifica\n<<PROTECT>>
Categoria "1" --> "0..*" Orcamento : limita\n<<CASCADE>>
Categoria "1" --> "0..*" TransacaoRecorrente : classifica\n<<PROTECT>>
CartaoCredito "0..1" --> "0..*" Transacao : vincula\n<<CASCADE>>
CartaoCredito "1" --> "0..*" FaturaCartao : gera\n<<CASCADE>>
CartaoCredito "0..1" --> "0..*" TransacaoRecorrente : associa\n<<SET_NULL>>
TipoTransacao <-- Transacao : usa
TipoTransacao <-- TransacaoRecorrente : usa
CorCartao <-- CartaoCredito : usa
Frequencia <-- TransacaoRecorrente : usa

@enduml
